k8s/keycloak/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    name: keycloak
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      name: keycloak
      labels:
        app: keycloak
        name: keycloak
    spec:
      restartPolicy: Always
      containers:
      - name: keycloak
        image: jboss/keycloak
        imagePullPolicy: IfNotPresent
        resources:
           limits:
             memory: 600Mi
             cpu: 400m
           requests:
             memory: 300Mi
             cpu: 200m
        ports:
          - name: http
            containerPort: 8080
          - name: https
            containerPort: 8443
