k8s/keycloak/keycloakService.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
    name: keycloak
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30036
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
      nodePort: 30037
  selector:
    app: keycloak
    name: keycloak
