k8s/keycloak/keycloak-ingress-host.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: auth.naybxrz.com
    http:
      paths:
      - path: /
        backend:
          serviceName: keycloak
          servicePort: 80
