k8s/keycloak/keycloak-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: production
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: keycloak
          servicePort: 80
